Fix flex rows on Firefox

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -211,7 +211,7 @@ form {
     > * {
       flex: 1;
       margin-right: 1.5rem;
-      width: 50%;
+      min-width: 0;
 
       &:last-child {
         margin-right: 0;
